# Hough-Transform-OCR-Image

./: .gitignore  CMakeLists.txt  README.md
src/: DetectEdge.cpp  DetectEdge.h  HoughDetectEdge.cpp  HoughDetectEdge.h  LSDDetectEdge.cpp  LSDDetectEdge.h  Tools.cpp  Tools.h  main.cpp  train.txt
